@@ -15,6 +15,7 @@ mlUnit development snapshot
 
   - Fix: matlabcommand.xml's logfile option is not actually optional
   - Fix: assert_equals judges Inf and Inf as not equal
+  - Fix: stack expansion for syntax errors forgets to remove .m file extension
 
 
 mlUnit 1.6.9 (2015-06-17)
